#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([uctodata], [0.1], [lamasoftware@science.ru.nl])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([configure.ac])

AC_OUTPUT([
  Makefile
  uctodata.pc
  config/Makefile
])
