#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.69)
AC_INIT([uctodata], [0.11], [lamasoftware@science.ru.nl])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([configure.ac])
AC_PROG_LN_S

AC_CONFIG_FILES([
  Makefile
  uctodata.pc
  config/Makefile
])
AC_OUTPUT
