config_DATA = tokconfig-eng tokconfig-nld tokconfig-fra tokconfig-ita \
	tokconfig-spa tokconfig-por tokconfig-deu tokconfig-swe \
	tokconfig-nld-twitter tokconfig-nld-sonarchat tokconfig-tur \
	tokconfig-nld-withplaceholder tokconfig-nld-historical tokconfig-fry tokconfig-rus \
	ligatures.filter \
	exotic-quotes.quote exotic-eos.eos \
	nld_afk.abr spa.abr por.abr

configdir = $(datadir)/ucto

EXTRA_DIST = $(config_DATA)
