config_DATA = tokconfig-eng tokconfig-eng-twitter tokconfig-nld tokconfig-fra tokconfig-ita \
	tokconfig-spa tokconfig-por tokconfig-deu tokconfig-swe \
	tokconfig-nld-twitter tokconfig-nld-sonarchat tokconfig-tur \
	tokconfig-nld-withplaceholder tokconfig-nld-historical tokconfig-fry \
	tokconfig-rus tokconfig-generic \
	ligatures.filter \
	e-mail.rule smiley.rule url.rule \
	standard-quotes.quote standard-eos.eos \
	exotic-quotes.quote exotic-eos.eos \
	nld_afk.abr spa.abr por.abr tur.abr fry.abr rus.abr \
	eng.abr swe.abr fra.abr deu.abr

configdir = $(datadir)/ucto

EXTRA_DIST = $(config_DATA)
